--- a/index.html
+++ b/index.html
@@ -23,9 +23,11 @@
             <div class="form__wrapper">
                 <form class="form">
                     <label for="name">Name</label>
-                    <input type="text" class="input" name="name">
-                    <input type="email" class="input" name="email">
-                    <input type="text" class="input" name="age">
+                    <input type="text" class="input" name="name" placeholder="Enter your name">
+                    <label for="email">Email</label>
+                    <input type="email" class="input" name="email" placeholder="Enter your Email">
+                    <label for="number">Age<small>(optional)</small></label>
+                    <input type="number" class="input" name="number" step="1" min="10">
                     <input type="text" class="input" name="select">
                 </form>
             </div>
