--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <label for="email">Email</label>
                     <input type="email" class="input" name="email" placeholder="Enter your Email">
                     <label for="number">Age<small>(optional)</small></label>
-                    <input type="number" class="input" name="number" step="1" min="10">
+                    <input type="number" class="input" name="number" step="1" min="10" placeholder="10">
                     <input type="text" class="input" name="select">
                 </form>
             </div>
