--- a/index.html
+++ b/index.html
@@ -22,13 +22,18 @@
             </header>
             <div class="form__wrapper">
                 <form class="form">
-                    <label for="name">Name</label>
-                    <input type="text" class="input" name="name" placeholder="Enter your name">
-                    <label for="email">Email</label>
-                    <input type="email" class="input" name="email" placeholder="Enter your Email">
-                    <label for="number">Age<small>(optional)</small></label>
-                    <input type="number" class="input" name="number" step="1" min="10" placeholder="10">
-                    <input type="text" class="input" name="select">
+                    <div class="form-group">
+                        <label for="name">Name</label>
+                        <input type="text" class="input" name="name" placeholder="Enter your name">
+                    </div>
+                    <div class="form-group">
+                        <label for="email">Email</label>
+                        <input type="email" class="input" name="email" placeholder="Enter your Email">
+                    </div>
+                    <div class="form-group">
+                        <label for="number">Age<small>(optional)</small></label>
+                        <input type="number" class="input" name="number" step="1" min="10" placeholder="10">
+                    </div>
                 </form>
             </div>
         </div>    
