--- a/index.html
+++ b/index.html
@@ -32,7 +32,93 @@
                     </div>
                     <div class="form-group">
                         <label for="number">Age<small>(optional)</small></label>
-                        <input type="number" class="input" name="number" step="1" min="10" placeholder="10">
+                        <input type="number" class="input" name="number" step="1" min="10" placeholder="age">
+                    </div>
+                    <div class="form-group">
+                        <p class="title">Which option best describes your current role?</p>
+                        <select class="form-select">
+                            <option disabled selected>Select curent role</option>
+                            <option>Student</option>
+                            <option>Full time Job</option>
+                            <option>Full time Learner</option>
+                            <option>Prefer notto say</option>
+                            <option>Other</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <p class="title">Would you recommend freeCodeCamp to a friend?</p>
+                        <label>
+                            <input type="radio" checked>
+                            Definitely
+                        </label>
+                        <label>
+                            <input type="radio">
+                            Maybe
+                        </label>
+                        <label>
+                            <input type="radio">
+                            Not sure
+                        </label>
+                    </div>  
+                    <div class="form-group">
+                        <p class="title">What is your favorite feature of freeCodeCamp?</p>
+                        <select class="form-select">
+                            <option disabled selected>Select an option</option>
+                            <option>Challenges</option>
+                            <option>Projects</option>
+                            <option>Community</option>
+                            <option>Open Source</option>
+                        </select>
+                    </div> 
+                    <div class="form-group">
+                        <p class="title">What would you like to see improved? <small>(Check all that apply)</small></p>
+                        <label>
+                            <input type="checkbox">
+                            Front-end Projecs
+                        </label>
+                        <label>
+                            <input type="checkbox">
+                            Back-end Projects
+                        </label>
+                        <label>
+                            <input type="checkbox">
+                            Data Visualizaion
+                        </label>
+                        <label>
+                            <input type="checkbox">
+                            Challenges
+                        </label>
+                        <label>
+                            <input type="checkbox">
+                            Open Sourse Community
+                        </label>
+                        <label>
+                            <input type="checkbox">
+                            Gitter help rooms
+                        </label>
+                        <label>
+                            <input type="checkbox">
+                            Videos
+                        </label>
+                        <label>
+                            <input type="checkbox">
+                            City Meetups
+                        </label>
+                        <label>
+                            <input type="checkbox">
+                            Wiki
+                        </label>
+                        <label>
+                            <input type="checkbox">
+                            Forum
+                        </label>
+                        <label>
+                            <input type="checkbox">
+                            Additional Courses
+                        </label>
+                    </div>
+                    <div class="form-group">
+                        <p class="title">Any comments or suggestions?</p>
                     </div>
                 </form>
             </div>
