--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
                     </div>
                     <div class="form-group">
                         <p class="title">Any comments or suggestions?</p>
+                        <textarea class="textarea" cols="30" rows="10" placeholder="Enter your comment here..."></textarea>
                     </div>
                 </form>
             </div>
