--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,300&display=swap" rel="stylesheet">t">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;1,200&display=swap" rel="stylesheet">
 
     <title>form</title>
 </head>
@@ -119,7 +119,10 @@
                     </div>
                     <div class="form-group">
                         <p class="title">Any comments or suggestions?</p>
-                        <textarea class="textarea" cols="30" rows="10" placeholder="Enter your comment here..."></textarea>
+                        <textarea class="textarea" cols="30" rows="7" placeholder="Enter your comment here..."></textarea>
+                    </div>
+                    <div class="form-group">
+                        <button class="btn">Submit</button>
                     </div>
                 </form>
             </div>
