--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
                 <form class="form">
                     <div class="form-group">
                         <label for="name">Name</label>
-                        <input type="text" class="input" name="name" placeholder="Enter your name">
+                        <input class="input" type="text"  name="name" placeholder="Enter your name">
                     </div>
                     <div class="form-group">
                         <label for="email">Email</label>
-                        <input type="email" class="input" name="email" placeholder="Enter your Email">
+                        <input class="input" type="email"  name="email" placeholder="Enter your Email">
                     </div>
                     <div class="form-group">
                         <label for="number">Age<small>(optional)</small></label>
-                        <input type="number" class="input" name="number" step="1" min="10" placeholder="age">
+                        <input class="input" type="number"  step="1" min="10" placeholder="age">
                     </div>
                     <div class="form-group">
                         <p class="title">Which option best describes your current role?</p>
